--- a/NextJS-main/my-app/package.json
+++ b/NextJS-main/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "jquery": "^3.6.4",
+    "jsonp": "^0.2.1",
     "moment": "^2.29.4",
     "next": "13.3.4",
     "react": "18.2.0",
