--- a/NextJS-main/my-app/package.json
+++ b/NextJS-main/my-app/package.json
@@ -16,8 +16,7 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "vk-io": "^4.8.3"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "18.16.3",
